Fix z-index value from 100pc to 100px

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   display: inline-block;
   top: 20px;
   right: 20px;
-  z-index: 100pc;
+  z-index: 100px;
   width: 60px;
   height: 34px;
 }
